--- a/RoyalBikeSmith/user/templates/dashboard/jobcard.html
+++ b/RoyalBikeSmith/user/templates/dashboard/jobcard.html
@@ -7,12 +7,12 @@
 {% block content %}
 
 
-<!-- <form method="POST">
+<form method="POST">
   {% csrf_token %}
   {{ customer.as_p }}
   {{ jobcard.as_p }}
   <input type="submit" value="Submit">
-</form> -->
+</form>
 
 <div class=" m-4 p-4">
   <form method="POST">
@@ -56,12 +56,12 @@
         <input type="text" name="registration_number" class="form-control"/>
       </div>
       <div class="form-group col-md-2 ">
-        <label>Current Kilo-Meter</label>
+        <label>Current Kilo-Meter:</label>
         <input type="number" name="current_km" class="form-control"/>
       </div>
 
       <div class="form-group col-md-2">
-        <label for="inputState">Maintenance Type</label>
+        <label for="inputState">Maintenance Type:</label>
         <select id="inputState" name="maintenance_type" class="form-control">
           <option selected>Full Service</option>
           <option>Chain</option>
@@ -76,25 +76,25 @@
       </div>
 
       <div class="form-group col-md-2 ">
-        <label>Work Assigned To </label>
+        <label>Work Assigned To: </label>
         <input type="text" name="work_assigned" class="form-control"/>
       </div>
       <div class="form-group col-md-2 ">
-        <label>Invoice Number</label>
-        <input type="number" class="form-control"/>
+        <label>Invoice Number:</label>
+        <input type="number" name="invoice_no" class="form-control"/>
       </div>
     </div>
 
     <div class="form-row">
       <div class="form-group col-md">
-        <label>Description</label>
+        <label>Description:</label>
         <textarea class="form-control" name="description" rows="6"></textarea>
       </div>
     </div>
 
     <button class="add_field_button btn btn-danger">Add More Cell</button>
     <!-- <button class="remove_field_button btn btn-success">Remove Cell</button> -->
-<!-- 
+
     <table class="table table-bordered table-primary mt-1">
       <thead>
         <tr>
@@ -110,11 +110,11 @@
         <tr>
           <td class="col-md-2"><input type="text" class="form-control" name="part_number"></td>
           <td class="col-md-2"><input type="text" class="form-control" name="part_name"></td>
-          <td class="col-md-2"><input type="number"  class="form-control" name="quantity"></td>
+          <td class="col-md-2"><input type="number" class="form-control" name="quantity"></td>
           <td class="col-md-2"><input type="number" pattern="^\d*(\.\d{0,2})?$" class="form-control" name="price"></td>
           <td class="col-md-2"><input type="number" class="form-control" pattern="^\d*(\.\d{0,2})?$" name="total"></td>
         </tr>
-        <tr>
+        <!-- <tr>
           <td class="col-md-2"><input type="text" class="form-control" name="part_number"></td>
           <td class="col-md-2"><input type="text" class="form-control" name="part_name"></td>
           <td class="col-md-2"><input type="number"  class="form-control" name="quantity"></td>
@@ -148,9 +148,16 @@
           <td class="col-md-2"><input type="number"  class="form-control" name="quantity"></td>
           <td class="col-md-2"><input type="number" pattern="^\d*(\.\d{0,2})?$" class="form-control" name="price"></td>
           <td class="col-md-2"><input type="number" class="form-control" pattern="^\d*(\.\d{0,2})?$" name="total"></td>
-        </tr>
+        </tr> -->
       </tbody>
-    </table> -->
+    </table>
+
+    <div class="form-row">
+      <div class="form-group col-md">
+        <label>Grand Total:</label>
+        <input type="number" name="grand_total" class="form-control" >
+      </div>
+    </div>
 
     <input class="col-md-2 btn btn-md btn-primary" type="submit" value="Create">
   </form>
