--- a/RoyalBikeSmith/user/templates/dashboard/tables.html
+++ b/RoyalBikeSmith/user/templates/dashboard/tables.html
@@ -100,27 +100,60 @@
           <!-- Card footer -->
           <div class="card-footer py-4">
             <nav aria-label="...">
+
+              {% if get_customer.has_other_pages %}
               <ul class="pagination justify-content-end mb-0">
+                {% if get_customer.has_previous %}
+                <li class="page-item">
+                  <a class="page-link" href="?page={{ get_customer.previous_page_number }}" tabindex="-1">
+                    <i class="fas fa-angle-left"></i>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                </li>
+
+                {% else %}
                 <li class="page-item disabled">
                   <a class="page-link" href="#" tabindex="-1">
                     <i class="fas fa-angle-left"></i>
                     <span class="sr-only">Previous</span>
                   </a>
                 </li>
-                <li class="page-item active">
-                  <a class="page-link" href="#">1</a>
-                </li>
+
+                {% endif %}
+
+
+                {% for i in get_customer.paginator.page_range %}
+
+                  {% if get_customer.number == i %}
+                    <li class="page-item active">
+                      <a class="page-link" href="#">{{i}}  <span class="sr-only">(current)</span></a>
+                    </li>
+                  {% else %}
+
+                    <li class="page-item ">
+                      <a class="page-link" href="?page={{i}}">{{i}}</a>
+                    </li>
+
+                  {% endif %}
+                {% endfor %}
+                  
+                {% if get_customer.has_next %}
                 <li class="page-item">
-                  <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
+                  <a class="page-link" href="?page={{get_customer.next_page_number}}">
+                    <i class="fas fa-angle-right"></i>
+                    <span class="sr-only">Next</span>
+                  </a>
                 </li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item">
+                {% else %}
+                <li class="page-item disabled">
                   <a class="page-link" href="#">
                     <i class="fas fa-angle-right"></i>
                     <span class="sr-only">Next</span>
                   </a>
                 </li>
+                {% endif %}
               </ul>
+              {% endif %}
             </nav>
           </div>
         </div>
