--- a/RoyalBikeSmith/user/templates/registration/logged_out.html
+++ b/RoyalBikeSmith/user/templates/registration/logged_out.html
@@ -1,4 +1,8 @@
 {% extends "index.html" %}
+{% load static %}
+{% block css %}   
+<link rel="stylesheet" href="{% static 'css/base.css'%}"> 
+{% endblock %}
 {% block title %}Logged out{% endblock %}
 {% block content %}
 <br>
